2000-07-14  Jeff Freedman  <jeff@amy.nerble.net>

	* barge.cc (Barge_object): Flying carpet is flying (somewhat)

	* effects.cc (Weather_effect): Improved rain effect.

	* Barges working slightly better.

2000-07-14  Tristan Tarrant  <tarrant_tristan@emc.com>

	* gamewin.cc: Don't show eggs by default. Should do the same for
	paths.

2000-07-13  Tristan Tarrant  <tarrant_tristan@emc.com>

	* titles.cc: Text under Guardian's speech and Guardian sinking back
	into screen after his performance :-)

2000-07-13  Tristan Tarrant  <tarrant_tristan@emc.com>

	* palette.cc, palette.h: New files which handle palette functions. 
	Now it is possible to use palettes from different data files.
	* exult.spec.in: simple spec file for creating RPM packages
	* titles.cc, titles.h: Moved intro, endgame and other bits and pieces
	in here. Introduction is nearly complete. 
	* flic/playfli.cc: Center flic on display
	* exult.cc: rearchitected the way the intro stuff is done
	* gamewin.cc: expunged most of the palette and intro junk. Some more 
	cleanups required however.
	* audio/Audio.h, audio/Audio.cc: allow bank choice in start_music
	* audio/Midi.cc: include another MIDI bank (the intro music).
	* fnames.h: Added intro music data file
	* usecode.cc: changed endgame invocation
	* .cvsignore: updated

2000-07-02  Jeff Freedman  <jeff@amy.nerble.net>

	* Starting support for projectile weapons.

2000-06-30  Jeff Freedman  <jeff@amy.nerble.net>

	* Death of Avatar works fairly well now.

2000-06-28  Jeff Freedman  <jeff@amy.nerble.net>

	* Fullscreen-toggle and scaling work together (tested on X).

2000-06-27  Jeff Freedman  <jeff@amy.nerble.net>

	* Death and resurrection.

2000-06-25  Tristan Tarrant  <tarrant_tristan@emc.com>

	* Makefile.am, exult.cc: use VERSION instead of RELNUM
	* exult.cc, gamewin.cc: move config stuff about splash to exult.cc

2000-06-24  Jeff Freedman  <jeff@amy.nerble.net>

	* gumps.cc (Stats_gump_object): Show name.
	* exult.cc: 'z' key brings up statistics.