@@ -36,7 +36,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include "Table.h"
 #include "Mixer.h"
 #include "Midi.h"
-#include "../../utils.h"
+#include "utils.h"
 
 
 //#undef HAVE_TIMIDITY_BIN	// Disabled for now
